--- a/src/html/info.html
+++ b/src/html/info.html
@@ -5,6 +5,9 @@
     <title> Azuria Server Info </title>
     <script src="/scripts/info.js" charset="utf-8"></script>
     <link rel="stylesheet" href="/css/info.css">
+    <link rel="stylesheet" href="/css/image.css">
+
+    <script src="/scripts/index.js"> </script>
 
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
   </head>
@@ -15,63 +18,65 @@
       <a href="/regeln">Regeln</a>
       <a class="active" href="/info">Server Info</a>
     </div>
-    <div class="header">
+    <div class="header" id="header">
       <h1>Azuria Server Info</h1>
     </div>
     <div class="" id="content">
-      <div class="partBright">
-        <div class="part">
-          <div class="">
-            <h3> Current Users: </h3>
-            <p id="userCount">0</p>
+      <div class="contentPart">
+        <div class="partBright">
+          <div class="part">
+            <div class="">
+              <h3> Current Users: </h3>
+              <p id="userCount">0</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="partDark">
-        <div class="part">
-          <div class="">
-            <h3> Max Users: </h3>
-            <p id="maxUsers">0</p>
+        <div class="partDark">
+          <div class="part">
+            <div class="">
+              <h3> Max Users: </h3>
+              <p id="maxUsers">0</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="partBright">
-        <div class="part">
-          <div class="">
-            <h3> Message of the Day: </h3>
-            <p id="motd">0</p>
+        <div class="partBright">
+          <div class="part">
+            <div class="">
+              <h3> Message of the Day: </h3>
+              <p id="motd">0</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="partDark">
-        <div class="part">
-          <div class="">
-            <h3> IP: </h3>
-            <p id="ip">0</p>
+        <div class="partDark">
+          <div class="part">
+            <div class="">
+              <h3> IP: </h3>
+              <p id="ip">0</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="partBright">
-        <div class="part">
-          <div class="">
-            <h3> Port: </h3>
-            <p id="port">0</p>
+        <div class="partBright">
+          <div class="part">
+            <div class="">
+              <h3> Port: </h3>
+              <p id="port">0</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="partDark">
-        <div class="part">
-          <div class="">
-            <h3> MC-Version: </h3>
-            <p id="version">0</p>
+        <div class="partDark">
+          <div class="part">
+            <div class="">
+              <h3> MC-Version: </h3>
+              <p id="version">0</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="partBright">
-        <div class="part">
-          <div class="">
-            <h3> Users: </h3>
-            <div class="" id="users"></div>
+        <div class="partBright">
+          <div class="part">
+            <div class="">
+              <h3> Users: </h3>
+              <div class="" id="users"></div>
+            </div>
           </div>
         </div>
       </div>
